--- a/environment3.yml
+++ b/environment3.yml
@@ -8,12 +8,15 @@ dependencies:
   - argon2-cffi=20.1.0=py38haf1e3a3_1
   - attrs=19.3.0=py_0
   - backcall=0.2.0=py_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.1=py_0
   - beautifulsoup4=4.9.1=py38_0
   - blas=1.0=mkl
   - bleach=3.1.5=py_0
   - blosc=1.19.0=hab81aa3_0
   - brotlipy=0.7.0=py38haf1e3a3_1000
   - bzip2=1.0.8=h1de35cc_0
+  - c-ares=1.15.0=h1de35cc_1001
   - ca-certificates=2020.6.24=0
   - catboost=0.24=py38h32f6830_0
   - certifi=2020.6.20=py38_0
@@ -21,13 +24,15 @@ dependencies:
   - cftime=1.2.1=py38hf1fa96c_0
   - chardet=3.0.4=py38_1003
   - cryptography=2.9.2=py38ha12b0ac_0
-  - curl=7.71.1=hb0a8c7a_1
+  - curl=7.69.1=ha441bb4_0
+  - cycler=0.10.0=py38_0
   - dbus=1.13.16=h18a8e69_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=py38_0
   - ephem=3.7.7.0=py38h1de35cc_0
   - expat=2.2.9=hb1e8313_2
+  - freetype=2.10.2=ha233b18_0
   - gettext=0.19.8.1=hb0f4f8b_2
   - glib=2.65.0=hc5f4afa_0
   - hdf4=4.2.13=h39711bb_2
@@ -50,25 +55,41 @@ dependencies:
   - jupyter_client=6.1.6=py_0
   - jupyter_console=6.1.0=py_0
   - jupyter_core=4.6.3=py38_0
-  - krb5=1.18.2=h75d18d8_0
-  - libcurl=7.71.1=h8a08a2b_1
+  - kiwisolver=1.2.0=py38h04f5b5a_0
+  - krb5=1.17.1=hddcf347_0
+  - lcms2=2.11=h92f6f08_0
+  - libblas=3.8.0=14_mkl
+  - libcblas=3.8.0=14_mkl
+  - libclang=10.0.0=default_hf57f61e_0
+  - libcurl=7.69.1=h051b688_0
   - libcxx=10.0.0=1
   - libedit=3.1.20191231=h1de35cc_1
+  - libev=4.33=haf1e3a3_0
   - libffi=3.3=hb1e8313_2
   - libgfortran=3.0.1=h93005f0_2
   - libiconv=1.16=h1de35cc_0
+  - liblapack=3.8.0=14_mkl
+  - liblapacke=3.8.0=14_mkl
+  - libllvm10=10.0.0=h21ff451_1
   - libllvm9=9.0.1=h21ff451_1
   - libnetcdf=4.7.3=he3b6227_0
+  - libnghttp2=1.41.0=h8a08a2b_1
+  - libopenblas=0.3.10=h0794777_0
   - libpng=1.6.37=ha441bb4_0
+  - libpq=12.2=h051b688_0
   - libprotobuf=3.12.3=hab81aa3_0
   - libsodium=1.0.18=h1de35cc_0
   - libssh2=1.9.0=ha12b0ac_1
+  - libtiff=4.1.0=hcb84e12_1
+  - libwebp-base=1.1.0=haf1e3a3_3
   - lightgbm=2.3.0=py38h0a44026_0
   - llvm-openmp=10.0.0=h28b9765_0
   - llvmlite=0.33.0=py38ha11be7d_1
   - lz4-c=1.9.2=hb1e8313_1
   - lzo=2.10=h1de35cc_2
   - markupsafe=1.1.1=py38h1de35cc_1
+  - matplotlib=3.2.2=0
+  - matplotlib-base=3.2.2=py38h5670ca0_0
   - mistune=0.8.4=py38h1de35cc_1001
   - mkl=2019.4=233
   - mkl-service=2.3.0=py38hfbe908c_0
@@ -80,10 +101,13 @@ dependencies:
   - ncurses=6.2=h0a44026_1
   - netcdf4=1.5.3=py38h28545a2_0
   - notebook=6.1.1=py38_0
+  - nspr=4.22=h0a44026_0
+  - nss=3.46.1=h2ca8224_0
   - numba=0.50.1=py38h959d312_1
   - numexpr=2.7.1=py38hce01a72_0
   - numpy=1.19.1=py38h3b9f5b6_0
   - numpy-base=1.19.1=py38hcfb5961_0
+  - olefile=0.46=py_0
   - openssl=1.1.1g=h1de35cc_0
   - packaging=20.4=py_0
   - pandas=0.25.3=py38h0a44026_0
@@ -93,6 +117,7 @@ dependencies:
   - pcre=8.44=hb1e8313_0
   - pexpect=4.8.0=py38_1
   - pickleshare=0.7.5=py38_1001
+  - pillow=7.2.0=py38ha54b6ba_0
   - pip=20.2.1=py38_0
   - prometheus_client=0.8.0=py_0
   - prompt-toolkit=3.0.5=py_0
@@ -119,6 +144,7 @@ dependencies:
   - readline=8.0=h1de35cc_0
   - requests=2.24.0=py_0
   - scikit-learn=0.23.1=py38h603561c_0
+  - scipy=1.5.0=py38hbab996c_0
   - send2trash=1.5.0=py38_0
   - setuptools=49.3.1=py38_0
   - sip=4.19.8=py38h0a44026_0
@@ -139,13 +165,13 @@ dependencies:
   - webencodings=0.5.1=py38_1
   - wheel=0.34.2=py38_0
   - widgetsnbextension=3.5.1=py38_0
+  - xlrd=1.2.0=py_0
   - xz=5.2.5=h1de35cc_0
   - zeromq=4.3.2=hb1e8313_2
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h1de35cc_3
   - zstd=1.4.5=h41d2c2f_0
   - pip:
-    - scipy==1.5.2
     - xgboost==1.1.1
 prefix: /anaconda3/envs/power-forecast
 
