--- a/environment.yml
+++ b/environment.yml
@@ -1,151 +1,245 @@
-name: power-forecast
+name: base
 channels:
-  - pvlib
-  - defaults
   - conda-forge
+  - defaults
 dependencies:
-  - appnope=0.1.0=py38_1001
-  - argon2-cffi=20.1.0=py38haf1e3a3_1
-  - attrs=19.3.0=py_0
-  - backcall=0.2.0=py_0
-  - beautifulsoup4=4.9.1=py38_0
-  - blas=1.0=mkl
-  - bleach=3.1.5=py_0
-  - blosc=1.19.0=hab81aa3_0
-  - brotlipy=0.7.0=py38haf1e3a3_1000
-  - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2020.6.24=0
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_gnu
+  - _py-xgboost-mutex=2.0=cpu_0
+  - aiohttp=3.6.2=py38h516909a_0
+  - alembic=1.4.3=pyh9f0ad1d_0
+  - argon2-cffi=20.1.0=py38h1e0a361_1
+  - async-timeout=3.0.1=py_1000
+  - async_generator=1.10=py_0
+  - attrs=20.2.0=pyh9f0ad1d_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.1=py_0
+  - bleach=3.2.1=pyh9f0ad1d_0
+  - blinker=1.4=py_1
+  - blosc=1.20.1=he1b5a44_0
+  - bokeh=2.2.1=py38h32f6830_0
+  - brotlipy=0.7.0=py38h1e0a361_1000
+  - c-ares=1.16.1=h516909a_3
+  - ca-certificates=2020.6.20=hecda079_0
+  - cairo=1.16.0=h3fc0475_1005
   - catboost=0.24=py38h32f6830_0
-  - certifi=2020.6.20=py38_0
-  - cffi=1.14.1=py38hed5b41f_0
-  - cftime=1.2.1=py38hf1fa96c_0
-  - chardet=3.0.4=py38_1003
-  - cryptography=2.9.2=py38ha12b0ac_0
-  - curl=7.71.1=hb0a8c7a_1
-  - dbus=1.13.16=h18a8e69_0
+  - certifi=2020.6.20=py38h924ce5b_2
+  - certipy=0.1.3=py_0
+  - cffi=1.14.3=py38h5bae8af_0
+  - chardet=3.0.4=py38h32f6830_1007
+  - click=7.1.2=pyh9f0ad1d_0
+  - cloudpickle=1.6.0=py_0
+  - conda=4.8.3=py38h32f6830_2
+  - conda-package-handling=1.7.0=py38h1e0a361_5
+  - configurable-http-proxy=1.3.0=0
+  - cryptography=3.1=py38h766eaa4_0
+  - cycler=0.10.0=py_2
+  - cytoolz=0.10.1=py38h516909a_0
+  - dask=2.27.0=py_0
+  - dask-core=2.27.0=py_0
+  - dask-labextension=3.0.0=py_0
+  - dbus=1.13.6=he372182_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
-  - entrypoints=0.3=py38_0
-  - ephem=3.7.7.0=py38h1de35cc_0
-  - expat=2.2.9=hb1e8313_2
-  - gettext=0.19.8.1=hb0f4f8b_2
-  - glib=2.65.0=hc5f4afa_0
-  - hdf4=4.2.13=h39711bb_2
-  - hdf5=1.10.4=hfa1e0ec_0
-  - icu=58.2=h0a44026_3
-  - idna=2.10=py_0
-  - importlib-metadata=1.7.0=py38_0
+  - distributed=2.27.0=py38h32f6830_0
+  - entrypoints=0.3=py38h32f6830_1001
+  - expat=2.2.9=he1b5a44_2
+  - fontconfig=2.13.1=h1056068_1002
+  - freetype=2.10.2=he06d7ca_0
+  - fribidi=1.0.10=h516909a_0
+  - fsspec=0.8.2=py_0
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - glib=2.66.0=h0dae87d_0
+  - graphite2=1.3.13=he1b5a44_1001
+  - graphviz=2.42.3=h0511662_0
+  - gst-plugins-base=1.14.5=h0935bb2_2
+  - gstreamer=1.14.5=h36ae1b5_2
+  - harfbuzz=2.7.2=hee91db6_0
+  - heapdict=1.0.1=py_0
+  - icu=67.1=he1b5a44_0
+  - idna=2.10=pyh9f0ad1d_0
+  - importlib-metadata=1.7.0=py38h32f6830_0
   - importlib_metadata=1.7.0=0
-  - intel-openmp=2019.4=233
-  - ipykernel=5.3.4=py38h5ca1d4c_0
-  - ipython=7.17.0=py38h39e3cac_0
-  - ipython_genutils=0.2.0=py38_0
-  - ipywidgets=7.5.1=py_0
-  - jedi=0.17.2=py38_0
-  - jinja2=2.11.2=py_0
-  - joblib=0.16.0=py_0
-  - jpeg=9b=he5867d9_2
-  - jsonschema=3.2.0=py38_1
-  - jupyter=1.0.0=py38_7
-  - jupyter_client=6.1.6=py_0
-  - jupyter_console=6.1.0=py_0
-  - jupyter_core=4.6.3=py38_0
-  - krb5=1.18.2=h75d18d8_0
-  - libcurl=7.71.1=h8a08a2b_1
-  - libcxx=10.0.0=1
-  - libedit=3.1.20191231=h1de35cc_1
-  - libffi=3.3=hb1e8313_2
-  - libgfortran=3.0.1=h93005f0_2
-  - libiconv=1.16=h1de35cc_0
-  - libllvm9=9.0.1=h21ff451_1
-  - libnetcdf=4.7.3=he3b6227_0
-  - libpng=1.6.37=ha441bb4_0
-  - libprotobuf=3.12.3=hab81aa3_0
-  - libsodium=1.0.18=h1de35cc_0
-  - libssh2=1.9.0=ha12b0ac_1
-  - lightgbm=2.3.0=py38h0a44026_0
-  - llvm-openmp=10.0.0=h28b9765_0
-  - llvmlite=0.33.0=py38ha11be7d_1
-  - lz4-c=1.9.2=hb1e8313_1
-  - lzo=2.10=h1de35cc_2
-  - markupsafe=1.1.1=py38h1de35cc_1
-  - mistune=0.8.4=py38h1de35cc_1001
-  - mkl=2019.4=233
-  - mkl-service=2.3.0=py38hfbe908c_0
-  - mkl_fft=1.1.0=py38hc64f4ea_0
-  - mkl_random=1.1.1=py38h959d312_0
-  - mock=4.0.2=py_0
-  - nbconvert=5.6.1=py38_1
+  - ipykernel=5.3.4=py38h23f93f0_0
+  - ipython=7.18.1=py38h1cdfbd6_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.5.1=pyh9f0ad1d_1
+  - jedi=0.17.2=py38h32f6830_0
+  - jinja2=2.11.2=pyh9f0ad1d_0
+  - joblib=0.17.0=py_0
+  - jpeg=9d=h516909a_0
+  - json5=0.9.4=pyh9f0ad1d_0
+  - jsonschema=3.2.0=py38h32f6830_1
+  - jupyter-server-proxy=1.5.0=py_0
+  - jupyter_client=6.1.7=py_0
+  - jupyter_core=4.6.3=py38h32f6830_1
+  - jupyter_telemetry=0.0.5=py_0
+  - jupyterhub=1.1.0=py38h32f6830_4
+  - jupyterhub-base=1.1.0=py38h32f6830_4
+  - jupyterlab=2.2.5=py_0
+  - jupyterlab_pygments=0.1.1=pyh9f0ad1d_0
+  - jupyterlab_server=1.2.0=py_0
+  - kiwisolver=1.2.0=py38hbf85e49_1
+  - krb5=1.17.1=hfafb76e_3
+  - lcms2=2.11=hbd6801e_0
+  - ld_impl_linux-64=2.35=h769bd43_9
+  - libblas=3.8.0=17_openblas
+  - libcblas=3.8.0=17_openblas
+  - libclang=10.0.1=default_hde54327_1
+  - libcurl=7.71.1=hcdd3856_6
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
+  - libevent=2.1.10=hcdb4288_3
+  - libffi=3.2.1=he1b5a44_1007
+  - libgcc-ng=9.3.0=h24d8f2e_16
+  - libgfortran-ng=7.5.0=hdf63c60_16
+  - libgomp=9.3.0=h24d8f2e_16
+  - libiconv=1.16=h516909a_0
+  - liblapack=3.8.0=17_openblas
+  - libllvm10=10.0.1=he513fc3_3
+  - libnghttp2=1.41.0=h8cfc5f6_2
+  - libopenblas=0.3.10=pthreads_hb3c22a3_4
+  - libpng=1.6.37=hed695b0_2
+  - libpq=12.3=h5513abc_1
+  - libsodium=1.0.18=h516909a_0
+  - libssh2=1.9.0=hab1572f_5
+  - libstdcxx-ng=9.3.0=hdf63c60_16
+  - libtiff=4.1.0=hc7e4089_6
+  - libtool=2.4.6=h516909a_1005
+  - libuuid=2.32.1=h14c3975_1000
+  - libuv=1.39.0=h516909a_0
+  - libwebp-base=1.1.0=h516909a_3
+  - libxcb=1.13=h14c3975_1002
+  - libxgboost=1.2.0=he1b5a44_0
+  - libxkbcommon=0.10.0=he1b5a44_0
+  - libxml2=2.9.10=h68273f3_2
+  - lightgbm=3.0.0=py38h950e882_1
+  - locket=0.2.0=py_2
+  - lz4=3.1.0=py38h66f7c9e_0
+  - lz4-c=1.9.2=he1b5a44_3
+  - mako=1.1.3=pyh9f0ad1d_0
+  - markupsafe=1.1.1=py38h1e0a361_1
+  - matplotlib=3.3.2=py38h32f6830_1
+  - matplotlib-base=3.3.2=py38h4d1ce4f_1
+  - mistune=0.8.4=py38h1e0a361_1001
+  - msgpack-python=1.0.0=py38hbf85e49_1
+  - multidict=4.7.5=py38h1e0a361_1
+  - mysql-common=8.0.21=2
+  - mysql-libs=8.0.21=hf3661c5_2
+  - nbclient=0.5.0=py_0
+  - nbconvert=6.0.3=py38h32f6830_0
   - nbformat=5.0.7=py_0
-  - ncurses=6.2=h0a44026_1
-  - netcdf4=1.5.3=py38h28545a2_0
-  - notebook=6.1.1=py38_0
-  - numba=0.50.1=py38h959d312_1
-  - numexpr=2.7.1=py38hce01a72_0
-  - numpy=1.19.1=py38h3b9f5b6_0
-  - numpy-base=1.19.1=py38hcfb5961_0
-  - openssl=1.1.1g=h1de35cc_0
-  - packaging=20.4=py_0
-  - pandas=0.25.3=py38h0a44026_0
-  - pandoc=2.10=0
-  - pandocfilters=1.4.2=py38_1
-  - parso=0.7.0=py_0
-  - pcre=8.44=hb1e8313_0
-  - pexpect=4.8.0=py38_1
-  - pickleshare=0.7.5=py38_1001
-  - pip=20.2.1=py38_0
-  - prometheus_client=0.8.0=py_0
-  - prompt-toolkit=3.0.5=py_0
-  - prompt_toolkit=3.0.5=0
-  - protobuf=3.12.3=py38hb1e8313_0
-  - ptyprocess=0.6.0=py38_0
-  - pvlib=0.7.2=py_0
-  - pycparser=2.20=py_2
-  - pygments=2.6.1=py_0
+  - ncurses=6.2=he1b5a44_1
+  - nest-asyncio=1.4.0=py_0
+  - nodejs=14.11.0=h568c755_0
+  - nomkl=1.0=h5ca1d4c_0
+  - notebook=6.1.3=py38h32f6830_0
+  - nspr=4.29=he1b5a44_0
+  - nss=3.57=he751ad9_0
+  - numpy=1.18.1=py38h8854b6b_1
+  - oauthlib=3.0.1=py_0
+  - olefile=0.46=py_0
+  - openssl=1.1.1h=h516909a_0
+  - packaging=20.4=pyh9f0ad1d_0
+  - pamela=1.0.0=py_0
+  - pandas=1.0.5=py38hcb8c335_0
+  - pandoc=2.10.1=h516909a_0
+  - pandocfilters=1.4.2=py_1
+  - pango=1.42.4=h7062337_4
+  - parso=0.7.1=pyh9f0ad1d_0
+  - partd=1.1.0=py_0
+  - pcre=8.44=he1b5a44_0
+  - pexpect=4.8.0=py38h32f6830_1
+  - pickleshare=0.7.5=py38h32f6830_1001
+  - pillow=7.2.0=py38h9776b28_1
+  - pip=20.2.3=py_0
+  - pixman=0.38.0=h516909a_1003
+  - prometheus_client=0.8.0=pyh9f0ad1d_0
+  - prompt-toolkit=3.0.7=py_0
+  - psutil=5.7.2=py38h1e0a361_0
+  - pthread-stubs=0.4=h14c3975_1001
+  - ptyprocess=0.6.0=py_1001
+  - py-xgboost=1.2.0=py38h32f6830_0
+  - pycosat=0.6.3=py38h1e0a361_1004
+  - pycparser=2.20=pyh9f0ad1d_2
+  - pycurl=7.43.0.5=py38h4400d41_2
+  - pygments=2.7.1=py_0
+  - pyjwt=1.7.1=py_0
   - pyopenssl=19.1.0=py_1
-  - pyparsing=2.4.7=py_0
-  - pyqt=5.9.2=py38h655552a_2
-  - pyrsistent=0.16.0=py38h1de35cc_0
-  - pysocks=1.7.1=py38_1
-  - pytables=3.6.1=py38h4727e94_0
-  - python=3.8.5=h26836e1_0
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyqt=5.12.3=py38ha8c2ead_4
+  - pyrsistent=0.17.3=py38h1e0a361_0
+  - pysocks=1.7.1=py38h32f6830_1
+  - python=3.8.5=h1103e12_8_cpython
+  - python-blosc=1.9.2=py38hc5bc63f_0
   - python-dateutil=2.8.1=py_0
+  - python-editor=1.0.4=py_0
+  - python-graphviz=0.14.1=pyh9f0ad1d_0
+  - python-json-logger=0.1.11=py_0
   - python_abi=3.8=1_cp38
-  - pytz=2020.1=py_0
-  - pyzmq=19.0.1=py38hb1e8313_1
-  - qt=5.9.7=h468cd18_1
-  - qtconsole=4.7.5=py_0
-  - qtpy=1.9.0=py_0
-  - readline=8.0=h1de35cc_0
-  - requests=2.24.0=py_0
-  - scikit-learn=0.23.1=py38h603561c_0
-  - send2trash=1.5.0=py38_0
-  - setuptools=49.3.1=py38_0
-  - sip=4.19.8=py38h0a44026_0
-  - siphon=0.8.0=py38_1002
-  - six=1.15.0=py_0
-  - snappy=1.1.8=hb1e8313_0
-  - soupsieve=2.0.1=py_0
-  - sqlite=3.32.3=hffcf06c_0
-  - terminado=0.8.3=py38_0
+  - pytz=2020.1=pyh9f0ad1d_0
+  - pyyaml=5.3.1=py38h1e0a361_0
+  - pyzmq=19.0.2=py38ha71036d_0
+  - qt=5.12.9=h1f2b2cb_0
+  - readline=8.0=he28a2e2_2
+  - requests=2.24.0=pyh9f0ad1d_0
+  - ruamel.yaml=0.16.12=py38h1e0a361_0
+  - ruamel.yaml.clib=0.2.2=py38h1e0a361_0
+  - ruamel_yaml=0.15.80=py38h1e0a361_1002
+  - scikit-learn=0.23.2=py38hee58b96_0
+  - scipy=1.5.2=py38h8c5af15_0
+  - send2trash=1.5.0=py_0
+  - setuptools=49.6.0=py38h32f6830_1
+  - simpervisor=0.3=py_1
+  - six=1.15.0=pyh9f0ad1d_0
+  - sortedcontainers=2.2.2=pyh9f0ad1d_0
+  - sqlalchemy=1.3.19=py38h1e0a361_0
+  - sqlite=3.33.0=h4cf870e_0
+  - tblib=1.6.0=py_0
+  - terminado=0.8.3=py38h32f6830_1
   - testpath=0.4.4=py_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
-  - tk=8.6.10=hb0a8c7a_0
-  - tornado=6.0.4=py38h1de35cc_1
-  - tqdm=4.48.2=py_0
-  - traitlets=4.3.3=py38_0
+  - tini=0.18.0=h14c3975_1001
+  - tk=8.6.10=hed695b0_0
+  - toolz=0.10.0=py_0
+  - tornado=6.0.4=py38h1e0a361_1
+  - tqdm=4.49.0=pyh9f0ad1d_0
+  - traitlets=5.0.4=py_0
+  - typing_extensions=3.7.4.2=py_0
   - urllib3=1.25.10=py_0
-  - wcwidth=0.2.5=py_0
-  - webencodings=0.5.1=py38_1
-  - wheel=0.34.2=py38_0
-  - widgetsnbextension=3.5.1=py38_0
-  - xz=5.2.5=h1de35cc_0
-  - zeromq=4.3.2=hb1e8313_2
+  - wcwidth=0.2.5=pyh9f0ad1d_1
+  - webencodings=0.5.1=py_1
+  - wheel=0.35.1=pyh9f0ad1d_0
+  - widgetsnbextension=3.5.1=py38h32f6830_1
+  - xgboost=1.2.0=py38h950e882_0
+  - xorg-kbproto=1.0.7=h14c3975_1002
+  - xorg-libice=1.0.10=h516909a_0
+  - xorg-libsm=1.2.3=h84519dc_1000
+  - xorg-libx11=1.6.12=h516909a_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xorg-libxext=1.3.4=h516909a_0
+  - xorg-libxpm=3.5.13=h516909a_0
+  - xorg-libxrender=0.9.10=h516909a_1002
+  - xorg-libxt=1.1.5=h516909a_1003
+  - xorg-renderproto=0.11.1=h14c3975_1002
+  - xorg-xextproto=7.3.0=h14c3975_1002
+  - xorg-xproto=7.0.31=h14c3975_1007
+  - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h516909a_0
+  - yarl=1.4.2=py38h516909a_0
+  - zeromq=4.3.2=he1b5a44_3
+  - zict=2.0.0=py_0
   - zipp=3.1.0=py_0
-  - zlib=1.2.11=h1de35cc_3
-  - zstd=1.4.5=h41d2c2f_0
+  - zlib=1.2.11=h516909a_1009
+  - zstd=1.4.5=h6597ccf_2
   - pip:
-    - scipy==1.5.2
-    - xgboost==1.1.1
-prefix: /anaconda3/envs/power-forecast
+    - filelock==3.0.12
+    - gdown==3.12.2
+    - pyqt5-sip==4.19.18
+    - pyqtchart==5.12
+    - pyqtwebengine==5.12.1
+    - xlrd==1.2.0
+prefix: /opt/conda
 
