--- a/environment.yml
+++ b/environment.yml
@@ -235,11 +235,20 @@ dependencies:
   - zlib=1.2.11=h516909a_1009
   - zstd=1.4.5=h6597ccf_2
   - pip:
+    - beautifulsoup4==4.9.3
+    - cftime==1.2.1
     - filelock==3.0.12
     - gdown==3.12.2
+    - netcdf4==1.5.4
+    - numexpr==2.7.1
+    - protobuf==3.13.0
+    - pvlib==0.6.3
     - pyqt5-sip==4.19.18
     - pyqtchart==5.12
     - pyqtwebengine==5.12.1
+    - siphon==0.8.0
+    - soupsieve==2.0.1
+    - tables==3.6.1
     - xlrd==1.2.0
 prefix: /opt/conda
 
