--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,9 @@ dependencies:
   - pandas
   - numpy
   - scikit-learn  
+  - xarray
+  - dask
+  - distributed
   - pip:
     - gdown==3.12.2
     - netcdf4==1.5.4
